# llm-lab

./: .gitignore  AGENTS.md  README.md  chat.py  endpoint.py  gradio_server.py  pyproject.toml  requirements.txt
.github/workflows/: doctests.yml  integration-tests.yml
cmc_cs040_preslie/: chat.py
cmc_cs040_preslie/tools/: calculate.py  cat.py  compact.py  doctests.py  git_utils.py  grep.py  ls.py  rm.py  write_file.py  write_files.py
src/cmc-cs040-preslielampitt/: chat.py
src/cmc_cs040_preslie/: chat.py
src/cmc_cs040_preslie.egg-info/: PKG-INFO  entry_points.txt
