[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cmc-cs040-preslie"
version = "0.1.4"
description = "LLM-based chat/document summarization project for CSC040"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "groq",
    "python-dotenv",
]

[project.scripts]
chat = "cmc_cs040_preslie.chat:repl"